[chromium] CCLayerTreeHostImpl::scrollBegin() should return ScrollFailed for CCInputHandlerClient::Gesture type when wheel handlers found. https://bugs.webkit.org/show_bug.cgi?id=82106

Reviewed by Adrienne Walker.

Source/WebCore:

Existing unit tests updated.

With gesture scroll events now being handled as mouse wheel events, we should not start a gesture scroll when
wheel handlers are present.

* platform/graphics/chromium/cc/CCLayerTreeHostImpl.cpp:
(WebCore::CCLayerTreeHostImpl::scrollBegin):

Source/WebKit/chromium:

* tests/CCLayerTreeHostImplTest.cpp:
(WebKit::TEST_F):


Canonical link: https://commits.webkit.org/99427@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@111971 268f45cc-cd09-0410-ab3c-d52691b4dbfc